k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: staging
  labels:
    app: flask-app
spec:
  type: NodePort
  selector:
    app: flask-app
  ports:
  - name: http
    port: 80
    targetPort: 8000
    nodePort: 31927
    protocol: TCP
